--- a/style/main.css
+++ b/style/main.css
@@ -322,14 +322,16 @@ hr {
   -moz-transition-property: -moz-transform;
   transition-property: transform; }
   .tile .tile-inner {
+    color: (0,0,0,0);
     border-radius: 3px;
     background: #eee4da;
+    background-size: cover;
     text-align: center;
     font-weight: bold;
     z-index: 10;
     font-size: 55px; }
   .tile.tile-2 .tile-inner {
-    background: #eee4da;
+    background: url("https://pic1.zhimg.com/v2-f912f66282a5a16110d86946790edc5c_1200x500.jpg");
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
     background: #ede0c8;
