--- a/style/main.css
+++ b/style/main.css
@@ -342,7 +342,7 @@ hr {
     background-size: cover; }
   .tile.tile-16 .tile-inner {
     color: rgb(0,0,0,0);
-    background: url("http://img.ipet.tw/uploads/B/ED/BEDCCF9A08.jpeg");
+    background: url("http://www.hotpets.com.tw/wp-content/uploads/2016/04/%E7%85%A7%E9%A1%A7%E5%A5%B6%E8%B2%93%E9%9C%80%E8%A6%81%E6%B3%A8%E6%84%8F%E7%9A%84%E4%BA%8B%E9%A0%85%EF%BC%81.jpg");
     background-size: cover; }
   .tile.tile-32 .tile-inner {
     color: rgb(0,0,0,0);
