--- a/style/main.css
+++ b/style/main.css
@@ -346,7 +346,7 @@ hr {
     background-size: cover; }
   .tile.tile-32 .tile-inner {
     color: rgb(0,0,0,0);
-    background: url("http://img.ipet.tw/uploads/B/ED/BEDCCF9A08.jpeg");
+    background: url("https://s.newtalk.tw/album/news/123/5ae6807860d7f.jpg");
     background-size: cover; }
   .tile.tile-64 .tile-inner {
     color: rgb(0,0,0,0);
