--- a/style/main.css
+++ b/style/main.css
@@ -350,11 +350,11 @@ hr {
     background-size: cover; }
   .tile.tile-64 .tile-inner {
     color: rgb(0,0,0,0);
-    background: url("http://img.ipet.tw/uploads/B/ED/BEDCCF9A08.jpeg");
+    background: url("https://m-miya.net/wp-content/uploads/2013/04/mame-1.jpg");
     background-size: cover; }
   .tile.tile-128 .tile-inner {
     color: rgb(0,0,0,0);
-    background: url("http://img.ipet.tw/uploads/B/ED/BEDCCF9A08.jpeg");
+    background: url("https://hk.ulifestyle.com.hk/cms/images/topic/1024/201709/20170901152955_6_20246032_432562023804900_98478550717063165_n.jpg");
     background-size: cover;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
     font-size: 45px; }
