--- a/style/main.css
+++ b/style/main.css
@@ -363,7 +363,7 @@ hr {
         font-size: 25px; } }
   .tile.tile-256 .tile-inner {
     color: rgb(0,0,0,0);
-    background: url("http://img.ipet.tw/uploads/B/ED/BEDCCF9A08.jpeg");
+    background: url("https://imagelab.nownews.com/?w=696&q=70&src=https://www.nownews.com/wp-content/uploads/2017/07/1534411232-0980c74ccf38f88a46e8eeeb74c6aba2-696x522.jpg");
     background-size: cover;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
     font-size: 45px; }
