--- a/style/main.css
+++ b/style/main.css
@@ -372,7 +372,7 @@ hr {
         font-size: 25px; } }
   .tile.tile-512 .tile-inner {
     color: rgb(0,0,0,0);
-    background: url("http://img.ipet.tw/uploads/B/ED/BEDCCF9A08.jpeg");
+    background: url("https://s.newtalk.tw/album/news/83/58bfbaeded1a1.jpg");
     background-size: cover;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
     font-size: 45px; }
