--- a/style/main.css
+++ b/style/main.css
@@ -381,7 +381,7 @@ hr {
         font-size: 25px; } }
   .tile.tile-1024 .tile-inner {
     color: rgb(0,0,0,0);
-    background: url("http://img.ipet.tw/uploads/B/ED/BEDCCF9A08.jpeg");
+    background: url("https://images2.gamme.com.tw/news2/2017/97/59/qZqapqWblqCbqKSY.jpg");
     background-size: cover;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
     font-size: 35px; }
@@ -390,7 +390,7 @@ hr {
         font-size: 15px; } }
   .tile.tile-2048 .tile-inner {
     color: rgb(0,0,0,0);
-    background: url("http://img.ipet.tw/uploads/B/ED/BEDCCF9A08.jpeg");
+    background: url("http://www.hanhande.net/upload/160113/1283568_140747_1732.jpg");
     background-size: cover;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 35px; }
