--- a/style/main.css
+++ b/style/main.css
@@ -381,7 +381,7 @@ hr {
         font-size: 25px; } }
   .tile.tile-1024 .tile-inner {
     color: rgb(0,0,0,0);
-    background: url("https://images2.gamme.com.tw/news2/2017/97/59/qZqapqWblqCbqKSY.jpg");
+    background: url("https://pbs.twimg.com/media/DDvWuLhUAAAnEsx.jpg");
     background-size: cover;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
     font-size: 35px; }
